--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     height:50%;
     width:50%;
     align-items:center;
-    font-size:1.5rem
+    font-size:40px;
 
 
 }
@@ -29,7 +29,7 @@ h1{
 body{
     display:flex;
     justify-content:center;
-    align-items:center;
+   
     font-weight:bold;
     font-size:20px;
     background:url("table.png");
